--- a/css/piclock.css
+++ b/css/piclock.css
@@ -1,7 +1,7 @@
 /*Pi Clock Style Sheet V1.0*/
 .card{width:100%;height:95%;}
 .dayColor{background-color: #fff;color:#1D1D1D}
-.displayExt{font-size: 2.8em;color:#333;}
+.displayExt{font-size: 2.8em;}
 .nigthColor{background-color: #1D1D1D;color:#ddd}
 .separador{height:6em}
-body{font-family: 'Roboto', sans-serif;color:#aaa;}
+body{font-family: 'Roboto', sans-serif;}
